unpackaged/main/default/objects/Sleeve_Basis_Rule__mdt/Sleeve_Basis_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Sleeve Basis Rule</label>
    <pluralLabel>Sleeve Basis Rules</pluralLabel>
</CustomObject>