unpackaged/main/default/objects/Sleeve_Basis_Rule__mdt/fields/Allowed_Funding_Basis__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Funding_Basis__c</fullName>
    <description>How a sleeve of this classification may be funded, enforced by the Order Ticket wizard: Dollar Only sleeves are fixed carve-outs, Percent Only sleeves are actively traded model weights, and Either lets the advisor choose per submission. The wizard filters each list&#39;s strategy picker by this value, so a Dollar Only strategy is never offered as a percentage sleeve. See TradeInstructionController (mirror) and c/envelopeFormSchema STRATEGY_BASIS.</description>
    <inlineHelpText>Dollar Only = fixed carve-out. Percent Only = traded model weight. Either = the advisor chooses.</inlineHelpText>
    <label>Allowed Funding Basis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent Only</fullName>
                <default>true</default>
                <label>Percent Only</label>
            </value>
            <value>
                <fullName>Dollar Only</fullName>
            </value>
            <value>
                <fullName>Either</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>