unpackaged/main/default/objects/Sleeve_Basis_Rule__mdt/fields/Excluded_From_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Excluded_From_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked = sleeves of this classification are EXCEPTION SLEEVES: they sit outside the model. The Order Ticket wizard takes their dollars off the Expected Account Value first, and the remaining sleeves&#39; target weights are percentages of what is left — so a $50k sleeve beside a $50k exception sleeve on a $100k account is 100%, not 50%. An exception sleeve carries no target weight of its own (its own dollars are what the others are a share of) and is therefore recorded in dollars, which means Allowed Funding Basis is IGNORED for these classifications — this one checkbox is all that is needed to make a classification an exception sleeve. Which classifications count lives here, never in code. See TradeInstructionController.excludedFor / effectiveAllowedBasisFor and c/envelopeFormSchema basisForOption + strategyTotals.allocationBase.</description>
    <inlineHelpText>Checked = an exception sleeve: its dollars come off the account value first and the other strategies are weighted against what is left. Always recorded in dollars, whatever Allowed Funding Basis says.</inlineHelpText>
    <label>Excluded From Allocation</label>
    <type>Checkbox</type>
</CustomField>