unpackaged/main/default/objects/Sleeve_Basis_Rule__mdt/fields/Sleeve_Classification__c.field-meta.xml
<CustomField>
    <fullName>Sleeve_Classification__c</fullName>
    <description>The Strategy__c.Sleeve_Classification__c API value this rule governs. Held as text rather than a picklist so the rule table does not have to be redeployed in lockstep with the picklist. The reserved value Default is the fallback used for a strategy whose classification is blank or has no rule of its own.</description>
    <inlineHelpText>Must match a Strategy Sleeve Classification picklist value exactly, or Default for the fallback rule.</inlineHelpText>
    <label>Sleeve Classification</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>